[project]
name = "ai-study"
version = "0.1.0"
description = ""
authors = [
    { name = "kaiqiang.zhong", email = "kaiqiang.zhong@zstack.io" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "chromadb (>=1.4.0,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-core (>=1.2.5,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "pydantic (>=2.12.5,<3.0.0)", # 类型检查
    "tavily-python (>=0.7.17,<0.8.0)",
    "langchain-tavily (>=0.2.16,<0.3.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "pypdf (>=6.5.0,<7.0.0)",
    "jq (>=1.10.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "unstructured (>=0.18.26,<0.19.0)",
    "markdown (>=3.10,<4.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv.workspace]
members = [
    "03.langchain_study_new",
]
