[project]
name = "03-langchain-study-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "dashscope>=1.25.16",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "icecream>=2.2.0",
    "ipython>=9.13.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-cli[inmem]>=0.4.26",
    "openai>=2.31.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "uvicorn>=0.44.0",
]
